syntax = "proto3";
package Chat;

import "google/protobuf/timestamp.proto";

message ChatMessagePacket
{
    string SessionId = 1;
    
    string Uuid = 2;
    
    string MessageId = 5;
    
    string Message = 3;

    google.protobuf.Timestamp Timestamp = 4;
};